results/SVCOMP/4-shot/log-ExSymExeD2L-2024_03_18_20_08_03.txt
class Main {

  //@ ensures \result ==> \result == true;
  //@ ensures !\result ==> \result == false;
  public static boolean f() {
    double x = Verifier.nondetDouble();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0 && x <= Long.MAX_VALUE / 2;
  //@ ensures \result ==> \result == true;
  //@ ensures !\result ==> \result == false;
  public boolean test(double x) {

    long res = (long) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:6: error: cannot find symbol
    double x = Verifier.nondetDouble();
               ^
  symbol:   variable Verifier
  location: class Main
1 error

